# DevCod

./: .env  .env.backup  .env.example  .gitignore  CHANGELOG.md  Procfile  README.md  RELATORIO_ESTRATEGICO.md  SECURITY.md  TESTING.md  app.py  build.sh  fix_db.py  fix_encoding.py  inspect_db.py  main.py  pyproject.toml  requirements.txt  runtime.txt  setup_users.py  ver_banco.py  wsgi.py
.trae/documents/: Create Professional Fleet Management Documentation.md  Develop SIGF-Const PWA with Dynamic JSON Forms.md
assets/css/: booking.css  delivery.css  edtech.css  navbar.css  style.css
assets/downloads/rpa/: cnpj_report_7.csv  cotacao_report_6.csv  seo_report_5.csv
assets/js/: booking.js  delivery.js  erp.js  main.js
backend/: main.py  sync_service.py
docs/: DEPLOY.md  MODULAR.md  POSTGRES_SETUP.md  RENDER_DEPLOY.md
frontend/: admin.html  index.html  login.html  manifest.json  sw.js
instance/: dev.db
schemas/: checklists.json
src/: extensions.py
src/controllers/: home_controller.py
src/controllers/booking/: booking_controller.py
src/controllers/delivery/: delivery_controller.py
src/controllers/edtech/: edtech_controller.py
src/models/edtech/: models.py
templates/: base.html  case_churn.html  case_sales.html  index.html  landing.html
templates/booking/: calendar.html
templates/components/: footer.html  navbar.html
templates/delivery/: menu.html
templates/edtech/: classroom.html  course.html  index.html
templates/erp/: dashboard.html
templates/real_estate/: details.html  index.html
templates/rpa/: dashboard.html
tests/: test_main.py
(+16 files in other folders)
