[project]
name = "devcod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-caching>=2.4.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "whitenoise>=6.12.0",
]
